@@ -9,6 +9,7 @@ Version 1.5.0current:
     * We don't remove RenamePage and DeletePage from menu any more if user is
       unknown. This stuff is only driven by ACLs now.
     * Some fixes to Despam action.
+    * Fixed moin_dump (broken by some recent theme init change).
   Other changes:
     * Added irc:// to the builtin supported link schemas. You can remove it
       from config.url_schemas in case you have patched it in there.
